# cinetodoapi/model/movie.go
@@ -1,11 +1,12 @@
 package model
 
 type Movie struct {
-	ID            int64  `json:"id"`
-	Title         string `json:"title"`
-	OriginalTitle string `json:"originalTitle"`
-	Year          uint16 `json:"year"`
-	Director      string `json:"director"`
+    ID            int64  `json:"id"`
+    Title         string `json:"title"`
+    OriginalTitle string `json:"originalTitle"`
+    Year          uint16 `json:"year"`
+    Director      string `json:"director"`
+    PosterPath    string `json:"posterPath"`
 }
 
 type UserMovie struct {
